add components report

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,8 +9,8 @@
                 <a style="cursor: pointer;" class="dropdown-toggle" role="button">Statistics <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li routerLinkActive="active"><a routerLink="statistics/yellowcard">Players/Yellow Cards</a></li>
-                    <li routerLinkActive="active"><a routerLink="/redcard-list">Players/Red Cards</a></li>
-                    <li routerLinkActive="active"><a routerLink="/minutesplayed-list">Minutes played</a></li>
+                    <li routerLinkActive="active"><a routerLink="statistics/redcard">Players/Red Cards</a></li>
+                    <li routerLinkActive="active"><a routerLink="statistics/minutesplayed">Minutes played</a></li>
                 </ul>
               </li>
         </ul>
